  a trailing "Error: Some fatal warnings were triggered" message.
  (Valentin Gatien-Baron, review by Alain Frisch)
### Manual and documentation:

- PR#7497, GPR#1095: manual, enable numbering for table of contents
  (Florian Angeletti, request by Daniel Bünzli)

### Manual and documentation:

- PR#6676, GPR#1110: move record notation to tutorial
  (Florian Angeletti, review by Gabriel Scherer)

### Tools:

- GPR#1045: ocamldep, add a "-shared" option to generate dependencies
  for native plugin files (i.e. .cmxs files)
  (Florian Angeletti, suggestion by Sébastien Hinderer)

- MPR#1956, GPR#973: tools/check-symbol-names checks for globally
  linked names not namespaced with caml_
  (Stephen Dolan)

- PR#6928: ocamldoc, do not introduce an empty <h1> in index.html when
  no -title has been provided
  (Pierre Boutillier)

* PR#7351: ocamldoc, use semantic tags rather than <br> tags in the html
  backend
  (Florian Angeletti, request and review by Daniel Bünzli )

* PR#7352,PR#7353: ocamldoc, better paragraphs in html output
  (Florian Angeletti, request by Daniel Bünzli)

### Compiler distribution build system

- GPR#558: enable shared library and natdynlink support on more Linux
  platforms
  (Felix Janda, Mark Shinwell)

* GPR#1104: remove support for the NeXTStep platform
  (Sébastien Hinderer)

### Internal/compiler-libs changes:

- GPR#1032: display the output of -dtimings as a hierarchy
  (Valentin Gatien-Baron, review by Gabriel Scherer)

### Manual and documentation:

- PR#7254, GPR#1096: Rudimentary documentation of ocamlnat
  (Mark Shinwell)

### Bug fixes

- PR#5927: Type equality broken for conjunctive polymorphic variant tags
  (Jacques Garrigue, report by Leo White)

- PR#6934: nonrec misbehaves with GADTs
  (Jacques Garrigue, report by Markus Mottl)

- PR#7261: Warn on type constraints in GADT declarations
  (Jacques Garrigue, report by Fabrice Le Botlan)

- PR#7321: Private type in signature clashes with type definition via
  functor instantiation